samples/_failures_safe/1761466196_4aca06_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ca053ee1.c: In function ‘display_graph’:
./samples/SAFE/__tmp_ca053ee1.c:157:5: error: expected expression at end of input
  157 |     for (
      |     ^~~
./samples/SAFE/__tmp_ca053ee1.c:157:5: error: expected declaration or statement at end of input
